--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.0",
+    "@radix-ui/react-form": "^0.1.1",
     "next": "15.1.0",
     "pg": "^8.13.1",
     "react": "^19.0.0",
